--- a/scss/libs/_libs.scss
+++ b/scss/libs/_libs.scss
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap");
+// Отменяем дефолтные стили браузеров
+// Указываем box sizing
 *,
 *::before,
 *::after {
@@ -10,24 +10,29 @@
   outline: none;
 }
 
+// Настройки по-умолчанию для body
 body {
   min-height: 100vh;
   line-height: 1;
 }
 
+// Удаляем стандартную стилизацию для всех ul и li, у которых есть атрибут class
 ul[class],
 ol[class] {
   list-style: none;
 }
 
+// Упрощаем работу с изображениями
 img {
   max-width: 100%;
   display: block;
 }
 
+// Убираем оформление элементов браузером
 form,
 input,
 button,
+  //select,
 option,
 textarea {
   appearance: none;
@@ -51,14 +56,12 @@ td {
   border-spacing: 0;
   appearance: none;
 }
-
 a {
   font-family: inherit;
   color: inherit;
   text-decoration: none;
   cursor: pointer;
 }
-
 button {
   cursor: pointer;
 }
@@ -76,13 +79,14 @@ body {
 
 a {
   text-decoration: none;
-}
-a:hover, a:focus, a:visited {
-  text-decoration: none;
+
+  &:hover, &:focus, &:visited {
+    text-decoration: none;
+  }
 }
 
-.header {
-  position: relative;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap');
+$Montserrat: 'Montserrat', sans-serif;
+$OpenSans: 'Open Sans', sans-serif;
 
-/*# sourceMappingURL=styles.css.map */
