--- a/scss/styles.css
+++ b/scss/styles.css
@@ -198,4 +198,72 @@ a:hover, a:focus, a:visited {
   background-size: 100% 100%;
 }
 
+.slider {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+}
+.slider__container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 1256px;
+  margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  box-sizing: border-box;
+}
+@media screen and (max-width: 1256px) {
+  .slider__container {
+    width: 1170px;
+  }
+}
+@media screen and (max-width: 1170px) {
+  .slider__container {
+    width: 968px;
+  }
+}
+@media screen and (max-width: 968px) {
+  .slider__container {
+    width: 750px;
+  }
+}
+@media screen and (max-width: 750px) {
+  .slider__container {
+    width: 100%;
+  }
+}
+.slider__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+  height: 702px;
+  overflow: hidden;
+  position: relative;
+}
+.slider__item {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border: none;
+  box-shadow: none;
+  opacity: 0;
+  transition: all 0.7s;
+}
+.slider__item img {
+  width: 100%;
+  height: 100%;
+}
+.slider__item.active {
+  opacity: 1;
+}
+
 /*# sourceMappingURL=styles.css.map */
