--- a/scss/styles.css
+++ b/scss/styles.css
@@ -265,5 +265,30 @@ a:hover, a:focus, a:visited {
 .slider__item.active {
   opacity: 1;
 }
+.slider__dots {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+}
+.slider__dots--item {
+  cursor: pointer;
+  height: 12px;
+  width: 12px;
+  margin: 0 2px;
+  background-color: #ddd;
+  border-radius: 50%;
+  display: inline-block;
+  transition: 0.4s all;
+}
+.slider__dots--item:hover, .slider__dots--item.active {
+  background-color: #000000;
+}
 
 /*# sourceMappingURL=styles.css.map */
