--- a/scss/slider/_slider.scss
+++ b/scss/slider/_slider.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   flex-direction: row;
   width: 100%;
+  margin-bottom: 105px;
 
   &__container {
     display: flex;
@@ -41,6 +42,23 @@
     height: 702px;
     overflow: hidden;
     position: relative;
+    box-shadow: 0px 6px 59px rgba(53, 49, 84, 0.08);
+
+    @media screen and (max-width: 1170px) {
+      height: 702px;
+    }
+
+    @media screen and (max-width: 968px) {
+      height: 487px;
+    }
+
+    @media screen and (max-width: 750px) {
+      height: 338px;
+    }
+
+    @media screen and (max-width: 440px) {
+      height: 250px;
+    }
   }
 
   &__item {
@@ -67,6 +85,47 @@
     }
   }
 
+  &__arrows {
+    display: none;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    height: 60px;
+    position: absolute;
+    top: calc(50% - (60px/2));
+
+    @media screen and (max-width: 440px) {
+      display: flex;
+    }
+  }
+
+  &__arrow {
+    display: flex;
+    align-items: center;
+    position: relative;
+    justify-content: center;
+    width: 40px;
+    padding: 10px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+  }
+
+  &__prev {
+    border-radius: 0 10px 10px 0;
+  }
+
+  &__next {
+    border-radius: 10px 0 0 10px;
+  }
+
   &__dots {
     display: flex;
     flex-wrap: wrap;
@@ -74,7 +133,7 @@
     justify-content: center;
     width: 100%;
     position: relative;
-    margin: 0;
+    margin-top: 17px;
     padding: 0;
     list-style: none;
     text-align: center;
@@ -83,14 +142,14 @@
       cursor: pointer;
       height: 12px;
       width: 12px;
-      margin: 0 2px;
-      background-color: #ddd;
+      margin: 0 5px;
+      background-color: #EFEEF6;
       border-radius: 50%;
       display: inline-block;
       transition: 0.4s all;
 
       &:hover, &.active {
-        background-color: #000000;
+        background-color: #9E98DC;
       }
     }
   }
