--- a/src/scss/books/_books.scss
+++ b/src/scss/books/_books.scss
@@ -192,6 +192,10 @@
     position: relative;
     width: 100%;
     height: 300px;
+
+    @media screen and (max-width: 440px) {
+      height: max-content;
+    }
   }
 
   &__img {
@@ -245,12 +249,12 @@
     color: #5C6A79;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
-    height: calc(10px * 1 * 1.6);
   }
 
   &__title {
-    display: -webkit-box;
+    text-overflow: ellipsis;
     overflow: hidden;
+    width: 100%;
     position: relative;
     margin: 0;
     margin-bottom: 5px;
@@ -260,8 +264,7 @@
     font-size: 16px;
     line-height: 1.6;
     color: #1C2A39;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
+    white-space: nowrap;
     height: calc(16px * 1 * 1.6);
   }
 
@@ -284,10 +287,6 @@
       width: calc(12px * 5);
       height: 100%;
       margin-right: 6px;
-      background-image: url('../img/icons/rating.png');
-      background-repeat: no-repeat;
-      -webkit-background-size: contain;
-      background-size: contain;
     }
 
     &--review {
