--- a/src/scss/slider/_slider.scss
+++ b/src/scss/slider/_slider.scss
@@ -1,4 +1,5 @@
 .slider {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -40,7 +41,7 @@
     flex-direction: row;
     width: 100%;
     height: 702px;
-    overflow: hidden;
+    //overflow: hidden;
     position: relative;
     box-shadow: 0px 6px 59px rgba(53, 49, 84, 0.08);
 
@@ -153,4 +154,155 @@
       }
     }
   }
+
+  &__link {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    font-family: Montserrat, sans-serif;
+    position: absolute;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    padding: 20px;
+    box-shadow: 0px 24px 36px rgba(53, 49, 84, 0.28);
+    z-index: 1;
+
+    img {
+      width: 55px;
+    }
+
+    &--first {
+      width: 149px;
+      height: 204px;
+      background-color: #9E98DC;
+      right: calc(149px / -2);
+      top: 79px;
+    }
+
+    &--last {
+      right: -160px;
+      width: 137px;
+      height: 273px;
+      background-color: #FF8FE6;
+      bottom: 90px;
+
+      span {
+        width: 69px;
+      }
+    }
+  }
+  
+  @media screen and(max-width: 1560px) {
+    &__link {
+      &--last {
+        right: unset;
+        left: calc(100vw - 300px);
+      }
+    }
+  }
+
+  @media screen and(max-width: 1470px) {
+    &__link {
+      &--first {
+        right: -30px;
+      }
+
+      &--last {
+        left: unset;
+        right: -60px;
+      }
+    }
+  }
+
+  @media screen and(max-width: 1190px) {
+    &__link {
+      &--first {
+        right: -10px;
+      }
+
+      &--last {
+        left: unset;
+        right: -40px;
+      }
+    }
+  }
+
+  @media screen and(max-width: 970px) {
+    &__link {
+      &--first {
+        width: 120px;
+        height: 190px;
+        right: -60px;
+      }
+
+      &--last {
+        height: 190px;
+        width: 110px;
+        right: -65px;
+        bottom: 0;
+      }
+    }
+  }
+
+  @media screen and(max-width: 820px) {
+    &__link {
+      &--first {
+        right: -30px;
+      }
+
+      &--last {
+        right: -32px;
+      }
+    }
+  }
+
+  @media screen and(max-width: 760px) {
+    &__link {
+      font-size: 10px;
+      height: max-content;
+      padding: 10px;
+
+      &--first {
+        top: 0;
+        right: 0px;
+      }
+
+      &--last {
+        right: 0px;
+      }
+    }
+  }
+
+  @media screen and(max-width: 440px) {
+    &__link {
+      bottom: -110px;
+      height: 70px;
+      box-sizing: border-box;
+
+      &--first {
+        top: unset;
+        left: 0;
+      }
+
+      &--last {
+        right: 0;
+      }
+    }
+  }
+
+  /*@media screen and(max-width: 1400px) {
+    &__link {
+      &--first {
+        right: unset;
+        left: calc(100vw - 230px);
+      }
+
+      &--last {
+        right: unset;
+        left: calc(100vw - 200px);
+      }
+    }
+  }*/
 }
